argo-events/base/ingress-argo-events.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-events
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /argo-events
        pathType: Prefix
        backend:
          service:
            name: webhook-eventsource-svc
            port:
              number: 32560
    host: argo-events.host.com
